# PyPqcReader

./: .gitignore  Dockerfile  README.md  main.py  openssl_wrapper.py  pqcreader.py  pyproject.toml  requiredfunctionality.md
.github/workflows/: python-package.yml
examples/: basic_usage.py
package/: README.md  pyproject.toml
pqcreader/: __init__.py  _pqcreader.py
