[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pqcreader"
version = "1.0.1"
description = "TLS Post-Quantum Cryptography tracer for Python HTTP requests"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Daan Acohen", email = "daan.acohen@connectingapps.net"}
]
maintainers = [
    {name = "Daan Acohen", email = "daan.acohen@connectingapps.net"}
]
keywords = [
    "tls",
    "post-quantum",
    "cryptography",
    "pqc",
    "ssl",
    "https",
    "security",
    "ml-kem",
    "kyber",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "urllib3>=1.26.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/ConnectingApps/PyPqcReader
Repository = "https://github.com/ConnectingApps/PyPqcReader"
Issues = "https://github.com/ConnectingApps/PyPqcReader/issues"
Documentation = "https://github.com/ConnectingApps/PyPqcReader/blob/main/package/README.md"

[tool.setuptools.packages.find]
include = ["pqcreader*"]
exclude = ["examples*"]
